# Physics-based_Animation_2023S

./: .gitignore  README.md
task01/: main.cpp
task01-houdini/: CMakeLists.txt  Entrance.cpp  Task01.cpp  Task01.h  task01.hipnc
task02/: main.cpp
task02-houdini/: CMakeLists.txt  Entrance.cpp  Task02.cpp  Task02.h  task02.hipnc
task03/: main.cpp
task03-houdini/: CMakeLists.txt  Entrance.cpp  Task03.cpp  Task03.h  task03.hipnc
task04/: main.cpp
task04-houdini/: CMakeLists.txt  Entrance.cpp  Task04.cpp  Task04.h
task05/: main.cpp
task05-houdini/: CMakeLists.txt  Entrance.cpp  Task05.cpp  Task05.h  task05.hipnc
task06/: main.cpp
task06-houdini/: CMakeLists.txt  Entrance.cpp  Task06.cpp  Task06.h  task06.hipnc
task07/: main.cpp
task07-houdini/: CMakeLists.txt  Entrance.cpp  Task07.cpp  Task07.h  task07.hipnc
task08/: main.cpp
task08-houdini/: CMakeLists.txt  Entrance.cpp  Task08.cpp  Task08.h  task08.hipnc
task09/: main.cpp
task09-houdini/: CMakeLists.txt  Entrance.cpp  Task09.cpp  Task09.h  task09.hipnc
task10/: main.cpp
task10-houdini/: CMakeLists.txt  Entrance.cpp  Task10.cpp  Task10.h  task10.hipnc
